--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <script>
     /* =========================
-       1) Firebase Config (مشروعك sekl-c6dbf)
+       1) Firebase Config
        ========================= */
     const firebaseConfig = {
       apiKey: "AIzaSyD5zCOEqEBNUULIxtadn6wNF_QU_PgbOQ0",
@@ -66,14 +66,6 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    // ملاحظة: للتجربة السريعة خلى Rules بالشكل ده (من لوحة Firebase):
-    // {
-    //   "rules": {
-    //     ".read": true,
-    //     ".write": true
-    //   }
-    // }
-
     /* =========================
        2) Helpers
        ========================= */
@@ -83,23 +75,21 @@
       const date=(d instanceof Date)?d:new Date(d);
       let h=date.getHours();
       const m=String(date.getMinutes()).padStart(2,'0');
-      const s=String(date.getSeconds()).padStart(2,'0');
       const ampm=h>=12?'م':'ص'; h=h%12; h=h?h:12;
-      return `${h}:${m}:${s} ${ampm}`;
+      return `${h}:${m} ${ampm}`;
     }
     function toast(msg){
       const el=$('#toast');
-      el.textContent='';
       el.innerHTML=msg;
       el.classList.remove('hidden');
       clearTimeout(el._t);
-      el._t=setTimeout(()=>el.classList.add('hidden'),2600);
+      el._t=setTimeout(()=>el.classList.add('hidden'),3500);
     }
 
     /* =========================
        3) UI
        ========================= */
-    const BIKE_COUNT = 12; // غير الرقم لو عايز
+    const BIKE_COUNT = 12;
     const timers = {};
     function bikeCard(i){
       return `
@@ -147,16 +137,21 @@
         toast('⚠️ من فضلك أدخل البيانات كاملة');
         return;
       }
+
       const start = Date.now();
       const end   = start + mins*60*1000;
 
-      // اكتب في قاعدة البيانات (الجميع هيشوف)
-      db.ref('bikes/'+i).set({ person, bikeName: bike, startTime: start, endTime: end })
-        .catch(err=>toast('خطأ في الحفظ: '+err.message));
+      db.ref('bikes/'+i).set({ 
+        person, 
+        bikeName: bike, 
+        startTime: start, 
+        endTime: end 
+      }).then(()=>{
+        toast(`✅ المستأجر "<b>${person}</b>" استلم "<b>${bike}</b>" من ${fmt12(start)} لغاية ${fmt12(end)}`);
+      }).catch(err=>toast('خطأ في الحفظ: '+err.message));
     }
 
     function stopRent(i){
-      // امسح من قاعدة البيانات (الجميع يتحدث)
       db.ref('bikes/'+i).remove()
         .catch(err=>toast('خطأ في الإنهاء: '+err.message));
     }
@@ -171,7 +166,7 @@
       $('#status'+i).className = 'ms-auto text-[11px] px-2 py-1 rounded-full ' + (on ? 'bg-amber-100 text-amber-700 dark:bg-amber-900 dark:text-amber-200' : 'bg-emerald-100 text-emerald-700 dark:bg-emerald-900 dark:text-emerald-200');
     }
 
-    function startCountdown(i,end,person,bike){
+    function startCountdown(i,end,person,bike,start){
       const el  = $('#cd'+i);
       const ret = $('#return'+i);
 
@@ -186,12 +181,20 @@
           $('#alarm').play().catch(()=>{});
           clearInterval(timers[i]);
           setDisabled(i,false);
-          ret.textContent = '—';
+          ret.innerHTML = '—';
           return;
         }
+
         const m = Math.floor(diff/60);
         const s = diff%60;
-        el.textContent = `الوقت المتبقي: ${m} دقيقة و ${String(s).padStart(2,'0')} ثانية`;
+
+        el.innerHTML = `
+          <div>👤 المستأجر: <b>${person}</b></div>
+          <div>🚲 العجلة: <b>${bike}</b></div>
+          <div>📌 بدأ من: ${fmt12(start)}</div>
+          <div>📌 ينتهي: ${fmt12(end)}</div>
+          <div>⏱️ الوقت المتبقي: ${m} دقيقة و ${String(s).padStart(2,'0')} ثانية</div>
+        `;
         ret.textContent = fmt12(end);
       }
       tick();
@@ -215,11 +218,11 @@
 
         for(let i=1;i<=BIKE_COUNT;i++){
           if(data[i]){
-            const {person,bikeName,endTime} = data[i];
+            const {person,bikeName,startTime,endTime} = data[i];
             $('#person'+i).value = person || '';
             $('#bike'+i).value   = bikeName || '';
             setDisabled(i,true);
-            startCountdown(i, Number(endTime), person, bikeName);
+            startCountdown(i, Number(endTime), person, bikeName, Number(startTime));
             rented++;
           } else {
             resetCard(i);
@@ -254,4 +257,4 @@
     bindRealtime();
   </script>
 </body>
-  </html>
+</html>
