--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <script>
     /* =========================
-       1) Firebase Config
+       1) Firebase Config (مشروعك sekl-c6dbf)
        ========================= */
     const firebaseConfig = {
       apiKey: "AIzaSyD5zCOEqEBNUULIxtadn6wNF_QU_PgbOQ0",
@@ -75,21 +75,23 @@
       const date=(d instanceof Date)?d:new Date(d);
       let h=date.getHours();
       const m=String(date.getMinutes()).padStart(2,'0');
+      const s=String(date.getSeconds()).padStart(2,'0');
       const ampm=h>=12?'م':'ص'; h=h%12; h=h?h:12;
-      return `${h}:${m} ${ampm}`;
+      return `${h}:${m}:${s} ${ampm}`;
     }
     function toast(msg){
       const el=$('#toast');
+      el.textContent='';
       el.innerHTML=msg;
       el.classList.remove('hidden');
       clearTimeout(el._t);
-      el._t=setTimeout(()=>el.classList.add('hidden'),3500);
+      el._t=setTimeout(()=>el.classList.add('hidden'),2600);
     }
 
     /* =========================
        3) UI
        ========================= */
-    const BIKE_COUNT = 12;
+    const BIKE_COUNT = 12; 
     const timers = {};
     function bikeCard(i){
       return `
@@ -137,18 +139,11 @@
         toast('⚠️ من فضلك أدخل البيانات كاملة');
         return;
       }
-
       const start = Date.now();
       const end   = start + mins*60*1000;
 
-      db.ref('bikes/'+i).set({ 
-        person, 
-        bikeName: bike, 
-        startTime: start, 
-        endTime: end 
-      }).then(()=>{
-        toast(`✅ المستأجر "<b>${person}</b>" استلم "<b>${bike}</b>" من ${fmt12(start)} لغاية ${fmt12(end)}`);
-      }).catch(err=>toast('خطأ في الحفظ: '+err.message));
+      db.ref('bikes/'+i).set({ person, bikeName: bike, startTime: start, endTime: end })
+        .catch(err=>toast('خطأ في الحفظ: '+err.message));
     }
 
     function stopRent(i){
@@ -177,22 +172,26 @@
         let diff  = Math.floor((end - now)/1000);
 
         if(diff <= 0){
-          el.textContent = `⏰ انتهى وقت "${bike}" (${person})`;
+          el.innerHTML = `
+            <div class="text-rose-600 dark:text-rose-400 font-semibold">⏰ انتهى الوقت!</div>
+            <div>👤 المستأجر: <b>${person}</b></div>
+            <div>🚲 العجلة: <b>${bike}</b></div>
+            <div>🕐 بدأ من: ${fmt12(start)}</div>
+            <div>🕐 انتهى عند: ${fmt12(end)}</div>
+          `;
+          ret.textContent = fmt12(end);
           $('#alarm').play().catch(()=>{});
           clearInterval(timers[i]);
-          setDisabled(i,false);
-          ret.innerHTML = '—';
           return;
         }
 
         const m = Math.floor(diff/60);
         const s = diff%60;
-
         el.innerHTML = `
           <div>👤 المستأجر: <b>${person}</b></div>
           <div>🚲 العجلة: <b>${bike}</b></div>
-          <div>📌 بدأ من: ${fmt12(start)}</div>
-          <div>📌 ينتهي: ${fmt12(end)}</div>
+          <div>🕐 بدأ من: ${fmt12(start)}</div>
+          <div>🕐 ينتهي عند: ${fmt12(end)}</div>
           <div>⏱️ الوقت المتبقي: ${m} دقيقة و ${String(s).padStart(2,'0')} ثانية</div>
         `;
         ret.textContent = fmt12(end);
